--- a/requirements.txt
+++ b/requirements.txt
@@ -201,4 +201,4 @@ xlrd==2.0.1
 xmltodict==0.13.0
 yarl==1.9.2
 zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1689374466814/work
-flask
+flask==3.0.3
