--- a/requirements.txt
+++ b/requirements.txt
@@ -5,50 +5,20 @@ agate-sql==0.5.9
 aiohttp==3.8.6
 aiosignal==1.3.1
 annotated-types==0.5.0
-anyio @ file:///home/conda/feedstock_root/build_artifacts/anyio_1693488585952/work
-appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1649077682618/work
-argon2-cffi @ file:///home/conda/feedstock_root/build_artifacts/argon2-cffi_1692818318753/work
-argon2-cffi-bindings @ file:///Users/runner/miniforge3/conda-bld/argon2-cffi-bindings_1666850851456/work
-arrow @ file:///home/conda/feedstock_root/build_artifacts/arrow_1662382474514/work
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1670263926556/work
-async-lru @ file:///home/conda/feedstock_root/build_artifacts/async-lru_1690563019058/work
 async-timeout==4.0.3
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1683424013410/work
-Babel @ file:///home/conda/feedstock_root/build_artifacts/babel_1677767029043/work
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
-backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1687772187254/work
-beautifulsoup4 @ file:///home/conda/feedstock_root/build_artifacts/beautifulsoup4_1680888073205/work
-bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1674535352125/work
 blinker==1.6.2
 blis==0.7.10
-Brotli @ file:///Users/runner/miniforge3/conda-bld/brotli-split_1693583518054/work
-cached-property @ file:///home/conda/feedstock_root/build_artifacts/cached_property_1615209429212/work
 cachetools==5.3.1
 catalogue==2.0.9
 certifi==2023.7.22
-cffi @ file:///Users/runner/miniforge3/conda-bld/cffi_1671179421243/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1688813409104/work
 click==8.1.7
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1691044910542/work
 confection==0.1.3
-contourpy @ file:///Users/runner/miniforge3/conda-bld/contourpy_1686733899847/work
 csvkit==1.1.1
-cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1635519461629/work
 cymem==2.0.7
 dbfread==2.0.7
-debugpy @ file:///Users/runner/miniforge3/conda-bld/debugpy_1691021311261/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-defusedxml @ file:///home/conda/feedstock_root/build_artifacts/defusedxml_1615232257335/work
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl#sha256=83276fc78a70045627144786b52e1f2728ad5e29e5e43916ec37ea9c26a11212
-entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1643888246732/work
-es-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.6.0/es_core_news_sm-3.6.0-py3-none-any.whl#sha256=917d0b6359b27b222ccd616c47b43ee951f05da7402fdccce99364a465fa95d6
 et-xmlfile==1.1.0
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1692026125334/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1667317341051/work
 fastjsonschema==2.17.1
 Flask==3.0.0
-fonttools @ file:///Users/runner/miniforge3/conda-bld/fonttools_1692542667314/work
-fqdn @ file:///home/conda/feedstock_root/build_artifacts/fqdn_1638810296540/work/dist
 frozenlist==1.4.0
 google-api-core==2.12.0
 google-api-python-client==2.101.0
@@ -57,42 +27,11 @@ google-auth-httplib2==0.1.1
 googleapis-common-protos==1.60.0
 h11==0.14.0
 httplib2==0.22.0
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1663625384323/work
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1688754491823/work
-importlib-resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1691408075105/work
-iniconfig @ file:///home/linux1/recipes/ci/iniconfig_1610983019677/work
-ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1691424478312/work
-ipython @ file:///Users/runner/miniforge3/conda-bld/ipython_1685727999785/work
-ipywidgets @ file:///home/conda/feedstock_root/build_artifacts/ipywidgets_1690877070294/work
 isodate==0.6.1
-isoduration @ file:///home/conda/feedstock_root/build_artifacts/isoduration_1638811571363/work/dist
 itsdangerous==2.1.2
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1690896916983/work
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1654302431367/work
 joblib==1.3.2
-json5 @ file:///home/conda/feedstock_root/build_artifacts/json5_1688248289187/work
-jsonpointer==2.0
-jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema-meta_1691761378595/work
-jsonschema-specifications @ file:///home/conda/feedstock_root/build_artifacts/jsonschema-specifications_1689701150890/work
-jupyter @ file:///Users/runner/miniforge3/conda-bld/jupyter_1670249688140/work
-jupyter-console @ file:///home/conda/feedstock_root/build_artifacts/jupyter_console_1678118109161/work
-jupyter-events @ file:///home/conda/feedstock_root/build_artifacts/jupyter_events_1691505939576/work
-jupyter-lsp @ file:///home/conda/feedstock_root/build_artifacts/jupyter-lsp-meta_1685453365113/work/jupyter-lsp
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1687700988094/work
-jupyter_core @ file:///Users/runner/miniforge3/conda-bld/jupyter_core_1686775851254/work
-jupyter_server @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_1693487358826/work
-jupyter_server_terminals @ file:///home/conda/feedstock_root/build_artifacts/jupyter_server_terminals_1673491454549/work
-jupyterlab @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_1692015883666/work
-jupyterlab-pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1649936611996/work
-jupyterlab-widgets @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_widgets_1688489450369/work
-jupyterlab_server @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_server_1690205927615/work
-kiwisolver @ file:///Users/runner/miniforge3/conda-bld/kiwisolver_1692883648061/work
 langcodes==3.3.0
 leather==0.3.4
-lxml @ file:///Users/runner/miniforge3/conda-bld/lxml_1688564767723/work
-MarkupSafe @ file:///Users/runner/miniforge3/conda-bld/markupsafe_1685769116730/work
-matplotlib @ file:///Users/runner/miniforge3/conda-bld/matplotlib-suite_1688685076282/work
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
 mistune==3.0.1
 multidict==6.0.4
 munkres==1.1.4
@@ -100,105 +39,53 @@ murmurhash==1.0.9
 nbclient==0.8.0
 nbconvert==7.6.0
 nbformat==5.9.0
-nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1664684991461/work
-notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1693410793506/work
-notebook_shim @ file:///home/conda/feedstock_root/build_artifacts/notebook-shim_1682360583588/work
-numpy @ file:///Users/runner/miniforge3/conda-bld/numpy_1691056507258/work
 olefile==0.46
 openai==0.28.1
 openpyxl==3.1.2
 outcome==1.2.0
-overrides @ file:///home/conda/feedstock_root/build_artifacts/overrides_1691338815398/work
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1681337016113/work
 pandas==2.1.0
-pandocfilters @ file:///home/conda/feedstock_root/build_artifacts/pandocfilters_1631603243851/work
 parsedatetime==2.6
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
 pathy==0.10.2
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1667297516076/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-Pillow @ file:///Users/runner/miniforge3/conda-bld/pillow_1688255923578/work
-pkgutil_resolve_name @ file:///home/conda/feedstock_root/build_artifacts/pkgutil-resolve-name_1633981968097/work
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1690813113769/work
 pluggy==0.12.0
 preshed==3.0.8
-prometheus-client @ file:///home/conda/feedstock_root/build_artifacts/prometheus_client_1689032443210/work
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1688565951714/work
 protobuf==4.24.3
-psutil @ file:///Users/runner/miniforge3/conda-bld/psutil_1681775196473/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
 pydantic==2.3.0
 pydantic_core==2.6.3
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1691408637400/work
-pyobjc-core @ file:///Users/runner/miniforge3/conda-bld/pyobjc-core_1686129355865/work
-pyobjc-framework-Cocoa @ file:///Users/runner/miniforge3/conda-bld/pyobjc-framework-cocoa_1686136113171/work
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1652235407899/work
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
 pytest==7.4.2
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
 python-dotenv==1.0.0
-python-json-logger @ file:///home/conda/feedstock_root/build_artifacts/python-json-logger_1677079630776/work
 python-slugify==8.0.1
 pytimeparse==1.1.8
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1693930252784/work
-PyYAML @ file:///Users/runner/miniforge3/conda-bld/pyyaml_1692737420010/work
-pyzmq @ file:///Users/runner/miniforge3/conda-bld/pyzmq_1691667603122/work
-referencing @ file:///home/conda/feedstock_root/build_artifacts/referencing_1691337268233/work
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1684774241324/work
-rfc3339-validator @ file:///home/conda/feedstock_root/build_artifacts/rfc3339-validator_1638811747357/work
-rfc3986-validator @ file:///home/conda/feedstock_root/build_artifacts/rfc3986-validator_1598024191506/work
-rpds-py @ file:///Users/runner/miniforge3/conda-bld/rpds-py_1693850477292/work
 rsa==4.9
 scikit-learn==1.3.0
 scipy==1.11.2
 selenium==4.12.0
-Send2Trash @ file:///Users/runner/miniforge3/conda-bld/send2trash_1682601407921/work
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
 smart-open==6.4.0
-sniffio @ file:///home/conda/feedstock_root/build_artifacts/sniffio_1662051266223/work
 sortedcontainers==2.4.0
-soupsieve @ file:///home/conda/feedstock_root/build_artifacts/soupsieve_1658207591808/work
 spacy==3.6.1
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 SQLAlchemy==1.4.49
 srsly==2.4.7
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-terminado @ file:///Users/runner/miniforge3/conda-bld/terminado_1670254106711/work
 text-unidecode==1.3
 thinc==8.1.12
 threadpoolctl==3.2.0
 tinycss2==1.2.1
-tomli @ file:///home/conda/feedstock_root/build_artifacts/tomli_1644342247877/work
-tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1692311902459/work
 tqdm==4.66.1
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1675110562325/work
 trio==0.22.2
 trio-websocket==0.10.4
 typer==0.9.0
-typing-utils @ file:///home/conda/feedstock_root/build_artifacts/typing_utils_1622899189314/work
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1688315532570/work
 tzdata==2023.3
 untangle==1.2.1
-uri-template @ file:///home/conda/feedstock_root/build_artifacts/uri-template_1688655812972/work/dist
 uritemplate==4.1.1
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1689789803562/work
 wasabi==1.1.2
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1673864653149/work
-webcolors @ file:///home/conda/feedstock_root/build_artifacts/webcolors_1679900785843/work
 webdriver-manager==4.0.0
 webencodings==0.5.1
-websocket-client @ file:///home/conda/feedstock_root/build_artifacts/websocket-client_1692730992302/work
 Werkzeug==3.0.0
-widgetsnbextension @ file:///home/conda/feedstock_root/build_artifacts/widgetsnbextension_1688504439014/work
-wordcloud @ file:///Users/runner/miniforge3/conda-bld/wordcloud_1688741787049/work
 wsproto==1.2.0
 xlrd==2.0.1
 xmltodict==0.13.0
 yarl==1.9.2
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1689374466814/work
 flask==3.0.3
+Flask==3.0.3
