--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ cymem==2.0.7
 dbfread==2.0.7
 et-xmlfile==1.1.0
 fastjsonschema==2.17.1
-Flask==3.0.0
+flask==3.0.0
 frozenlist==1.4.0
 google-api-core==2.12.0
 google-api-python-client==2.101.0
